<resources>
    <string name="app_name">My_single_page_app_input_validation</string>
    <string name="password">password</string>
    <string name="send">Send</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email">Email</string>
    <string name="lost_name">Lost name</string>
    <string name="first_name">First name</string>
    <string name="textview">TextView</string>
    <string name="title_activity_users">Users</string>
    <string name="dontTrue">Паролі не співпадають</string>
    <string name="passError">Пароль має складатись більш ніж з 6 символів та не містити розділових знаків</string>
    <string name="errorNumber">Заповніть поле та перевірте правильність вводу</string>
    <string name="errorEmail">Заповніть поле та перевірте правильність вводу</string>
    <string name="errorLastname">Прізвище не може містити розділові знаки та цифри</string>
    <string name="errorName">Ім\'я не може містити розділові знаки та цифри</string>
    <string name="wrongField">Wrong field</string>
    <string name="wrongFields">Wrong fields</string>
    <string name="dataSent">Data sent</string>
</resources>
